--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -22,6 +22,9 @@
     
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
+        <p:column headerText="#{bundle.TermApproval}" >
+            
+        </p:column>
     </ui:define>
 
 </ui:composition>
