--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -100,8 +100,9 @@
                                         required="#{param['isRequired'] == 'true'}" 
                                         disabled="#{taskCardBean.readOnly}"
                                         locale="#{sessionBean.locale}"
-                                        navigator="true" yearRange="c-120:c+20"                                
+                                        navigator="true" yearRange="c-120:c+20"                                        
                                         requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
+                                <f:validator validatorId="deadlineValidator" />
                             </p:calendar>
 
                             <p:outputLabel value="#{bundle.ActualEndDate}:" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_COMPLETED}"/>
@@ -153,7 +154,7 @@
                 </p:panelGrid>
             </p:tab>
             
-            <p:tab title="#{bundle.Settings}" rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_DRAFT}">
+            <p:tab title="#{bundle.Settings}" rendered="#{taskCardBean.isReadOnly()}">
                 <!-- Настройка напоминаний и настройка результатов -->
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
                     <p:outputLabel value="#{bundle.ListResults}" indicateRequired="true"/>
