--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -24,7 +24,7 @@
 
     <ui:define name="toolbarComponents" >
         <p:commandButton id="btnMarkAllAsRead" value="#{bundle.MarkAsReads}" title="#{bundle.MarkAllAsRead}"
-                         disabled="#{userMsgBean.checkedItemsEmpty()}"
+                         disabled="#{userMsgBean.checkedItems.isEmpty()}"
                          update="centerFRM"
                          actionListener="#{userMsgBean.markAsRead()}">
         </p:commandButton>
@@ -72,7 +72,7 @@
                      emptyMessage="#{bundle.EmptyTable}"
                      paginator="true" paginatorPosition="bottom"
                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                     rowsPerPageTemplate="10,25,50" rows="10" rowKey="#{item.id}"
+                     rowsPerPageTemplate="10,25,50" rows="10" 
                      currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
                      tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
                      var="item" sortBy="#{item.dateSent}" sortOrder="descending"
@@ -109,6 +109,7 @@
                                 rendered="#{item.task != null}"
                                 actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
                                 oncomplete="document.getElementById('centerFRM:openTaskBtn').click();"/>
+                <p:spacer width="5"/>
                 <p:commandLink  value="#{bundle.GoToDocument}"
                                 rendered="#{item.document != null}"
                                 actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
