--- a/escom-bpm-web/src/main/webapp/view/tasks/scheduler.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/scheduler.xhtml
@@ -39,7 +39,7 @@
     <ui:define name="centerFormContent">
         <h:panelGrid columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
             <p:schedule id="schedule" value="#{schedulerBean.eventModel}" widgetVar="schedule" ignoreTimezone="false"
-                        timeFormat="HH:mm" axisFormat="HH" tooltip="true" resizable="true"  firstHour="8" 
+                        timeFormat="HH:mm" axisFormat="HH" tooltip="true" resizable="true"  scrollTime="09:00:00" 
                         locale="#{sessionBean.locale}" >
                 <p:ajax event="dateSelect" listener="#{schedulerBean.onDateSelect}"  />
                 <p:ajax event="eventSelect" listener="#{schedulerBean.onEventSelect}"  />
