--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
@@ -7,7 +7,7 @@
     <p:toolbar id="explToolBar">
         <f:facet name="left">
             <p:commandButton icon="ui-icon-circle-arrow-w" rendered="#{!_explorerBean.selectorViewMode}"
-                             title="#{bundle.GotoIndex}" ajax="false"
+                             title="#{bundle.GotoIndex}" ajax="false" style="width: 60px;"
                              action="#{sessionBean.goToIndex() }"
                              onclick="return isClose = 1;"/>
 
